# SquirrelTradeBot

./: ..gitignore.kate-swp  CMakeLists.txt  README.md
Sources/: ThreadUtils.cpp  ThreadUtils.h  bot.cpp
Sources/Private/: CryptoCurrency.cpp  CryptoCurrencyManager.cpp  bot_lib.cpp
Sources/Public/: CryptoCurrency.h  CryptoCurrencyManager.h  bot_lib.h
